fixed whitespace

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
   
 
 .navbar {
-    width: 100%;
+    width: 98.75%;
     display: flex;
     // justify-content: space-between;
     align-items: center;
