--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,8 @@ section {
 .container {
   max-width: 90%;
   margin:0 auto 0rem;
-  /* padding: 0 20px; */
-  /* background: var(--dark-blue); */
+  padding: 0 20px;
+  background: var(--dark-blue);
 }
 
 
